tests/baselines/reference/usingDeclarationsInForIn.errors.txt
usingDeclarationsInForIn.ts(1,6): error TS1493: The left-hand side of a 'for...in' statement cannot be a 'using' declaration.


==== usingDeclarationsInForIn.ts (1 errors) ====
    for (using x in {}) {
         ~~~~~~~
!!! error TS1493: The left-hand side of a 'for...in' statement cannot be a 'using' declaration.
    }
    